--- a/surpresa.html
+++ b/surpresa.html
@@ -51,10 +51,27 @@
   </video>
 
   <div class="message">
-    Desde o momento em que você entrou na minha vida, tudo ganhou cor, sentido e luz. <br><br>
-    Cada risada sua, cada abraço, cada olhar... tudo em você é poesia viva. <br><br>
-    Te preparei esse vídeo com muito carinho porque você merece o mundo — e mais um pouco. <br><br>
-    Eu te amo infinitamente, hoje e sempre. 💖
+   Às vezes, a vida coloca muitas pessoas no nosso caminho, mas quase nenhuma toca o coração de verdade. Algumas passam, outras até deixam lembranças… mas você não. Você foi diferente desde o início. Você chegou de um jeito suave, quase silencioso, mas ao mesmo tempo trouxe uma luz tão grande que mudou tudo ao meu redor. Sem pedir nada, você transformou o que estava bagunçado dentro de mim.
+<br><br>
+
+Com você, eu descobri uma paz que eu nem sabia que existia. Você trouxe calma onde antes havia confusão, trouxe carinho onde havia feridas, trouxe amor onde faltava segurança. Você não veio só para ficar — você veio para curar, para iluminar, para transformar.
+<br><br>
+
+E o mais bonito de tudo é que, mesmo depois das idas e vindas, depois das pausas, das dores e das saudades… a vida ainda te trouxe de volta pra mim. Isso diz muito. Diz que existe algo maior entre nós, algo que nem o tempo, nem a distância, nem os erros conseguiram apagar.
+<br><br>
+
+Você tem um jeito único de cuidar, de olhar, de sentir. Um jeito que acalma, que abraça mesmo sem tocar, que me faz sentir que sou importante. Com você, o coração descansa. Com você, existe verdade.
+<br><br>
+
+E é por isso que eu sou tão grato por esse recomeço. Por você ter escolhido voltar. Por acreditar que nós ainda temos muito para viver juntos. E temos.
+<br><br>
+
+Obrigado, meu amor, por ser essa mulher tão incrível, tão forte, tão doce… por ser luz, por ser paz, por ser abrigo. Prometo cuidar de você, respeitar você e fazer desse recomeço o capítulo mais bonito da nossa história.
+<br><br>
+
+Você é, e sempre será, a pessoa mais especial da minha vida. Eu te amo mi amor.
+<br><br>
   </div>
 </body>
 </html>
+
